--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 	</head>
 	<body>
 		<header>
-			<h1>Circles</h1>
+			<h1>Fractal</h1>
 		</header>
 			<section id="content">
 				<canvas id="OriginalFractal" data-processing-sources="OriginalFractal.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Click to change number of circles.
+		    Click to change number of circles. Press any key to change to rectangle.
 	    </footer>
 	</body>
 </html>
