--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Click to change number of circles. Press any key to change to rectangle.
+		    Click to change number of circles and rectangles. Press any key to change to rectangle, click again to change back.
 	    </footer>
 	</body>
 </html>
